--- a/webapp/package.json
+++ b/webapp/package.json
@@ -53,6 +53,7 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "http-proxy": "^1.18.1",
     "https-proxy-agent": "^5.0.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
