--- a/webapp/package.json
+++ b/webapp/package.json
@@ -45,7 +45,8 @@
     "url-parse": "^1.5.9",
     "webpack-dev-server": "^4.7.2",
     "yargs-parser": "^13.1.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "terser": ">=5.14.2"
   },
   "devDependencies": {
     "@angular/cli": "^14.0.5",
@@ -69,6 +70,7 @@
     "ts-node": "~7.0.1",
     "tslint": "^6.1.3",
     "typescript": "^4.7.4",
-    "webpack-subresource-integrity": "^1.5.2"
+    "webpack-subresource-integrity": "^1.5.2",
+    "terser": ">=5.14.2"
   }
 }
